force-app/main/default/objects/Daily_Sale__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Reported Incomplete</fullName>
                <color>#FF9900</color>
                <label>Reported Incomplete</label>
            </value>
            <value>
                <fullName>Reported Confirmed</fullName>
                <color>#33CC00</color>
                <label>Reported Confirmed</label>
            </value>
            <value>
                <fullName>TOR</fullName>
            </value>
            <value>
                <fullName>Certified Pending</fullName>
            </value>
            <value>
                <fullName>Certified Approved</fullName>
            </value>
            <value>
                <fullName>Certified Complete</fullName>
            </value>
            <value>
                <fullName>Certified Re-opened</fullName>
            </value>
            <value>
                <fullName>Audited</fullName>
                <isActive>false</isActive>
                <label>Audited</label>
            </value>
            <value>
                <fullName>Certified</fullName>
                <isActive>false</isActive>
                <label>Certified</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <isActive>false</isActive>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Not Confirmed</fullName>
                <isActive>false</isActive>
                <label>Not Confirmed</label>
            </value>
            <value>
                <fullName>Reported Complete</fullName>
                <isActive>false</isActive>
                <label>Reported Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>