force-app/main/default/objects/Daily_Sale__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Daily Sales</relationshipLabel>
    <relationshipName>Daily_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>