force-app/main/default/objects/Daily_Sale__c/fields/Store_Closed__c.field-meta.xml
<CustomField>
    <fullName>Store_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maps to MRI:TRADEOVER</description>
    <inlineHelpText>Select to indicate the store was closed on the trading date.</inlineHelpText>
    <label>Store Closed</label>
    <type>Checkbox</type>
</CustomField>