force-app/main/default/objects/Daily_Sale__c/fields/Store_Formula__c.field-meta.xml
<CustomField>
    <fullName>Store_Formula__c</fullName>
    <formula>LEFT(Store__r.Brand__r.Name,FIND(&quot; in &quot;, Store__r.Name,0)) &amp; &quot; (&quot; &amp; Store__r.Village__r.Name &amp; &quot;)&quot;</formula>
    <label>Store</label>
    <type>Text</type>
</CustomField>