force-app/main/default/objects/Daily_Sale__c/fields/Tax_Free_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Sales_Amount__c</fullName>
    <inlineHelpText>Tax Free Sales Amount</inlineHelpText>
    <label>Tax Free Sales Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>