force-app/main/default/objects/Daily_Sale__c/fields/Tax_Free_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Transactions__c</fullName>
    <inlineHelpText>Tax Free Transactions</inlineHelpText>
    <label>Tax Free Transactions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>