force-app/main/default/objects/Daily_Sale__c/fields/Total_GROSS_SALES__c.field-meta.xml
<CustomField>
    <fullName>Total_GROSS_SALES__c</fullName>
    <inlineHelpText>Total Gross Sales (Including VAT)</inlineHelpText>
    <label>Total GROSS SALES</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>