force-app/main/default/objects/Daily_Sale__c/fields/Total_Gross_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Turnover__c</fullName>
    <formula>Total_GROSS_SALES__c +  GROSS_Value_of_Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total GROSS_SALES +  GROSS Value of Discounts</inlineHelpText>
    <label>Total Gross Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>