force-app/main/default/objects/Daily_Sale__c/fields/Total_NET_SALES__c.field-meta.xml
<CustomField>
    <fullName>Total_NET_SALES__c</fullName>
    <inlineHelpText>This is the total sales for the day including all types of sales (e.g. Special Curated Selection Sales, Current Season Bestsellers Sales)</inlineHelpText>
    <label>Total NET SALES</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>