force-app/main/default/objects/Daily_Sale__c/fields/Trading_Date__c.field-meta.xml
<CustomField>
    <fullName>Trading_Date__c</fullName>
    <description>maps to MRI: TRADEDATE</description>
    <label>Trading Date</label>
    <type>Date</type>
</CustomField>