force-app/main/default/objects/Daily_Sale__c/fields/tradingdate__c.field-meta.xml
<CustomField>
    <fullName>tradingdate__c</fullName>
    <formula>IF(  Trading_Date__c  &lt; DATEVALUE(LastModifiedDate) , true , false)</formula>
    <label>Trading Date before Last Modified</label>
    <type>Checkbox</type>
</CustomField>