force-app/main/default/objects/Daily_Sale__c/fields/Turnover_Rent_Date__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Rent_Date__c</fullName>
    <description>Returned by MRI to indicate Turnover rent process has been run for this Daily Sale record.</description>
    <inlineHelpText>Returned by MRI to indicate Turnover rent process has been run for this Daily Sale record.</inlineHelpText>
    <label>Turnover Rent Date</label>
    <type>Date</type>
</CustomField>