force-app/main/default/objects/Daily_Sale__c/fields/Units_per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Units_per_Transaction__c</fullName>
    <formula>Units_Sold__c /  Number_of_Transactions__c</formula>
    <label>Units per Transaction</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>