force-app/main/default/objects/Daily_Sale__c/fields/Units_Sold__c.field-meta.xml
<CustomField>
    <fullName>Units_Sold__c</fullName>
    <inlineHelpText>The number of units sold</inlineHelpText>
    <label>Units Sold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>