force-app/main/default/objects/Daily_Sale__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <formula>IF(Store_Closed__c = FALSE, Certified_Amount__c - Brand_Reported_Amount__c, Brand_Reported_Amount__c*-1)</formula>
    <label>Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>