force-app/main/default/objects/Daily_Sale__c/fields/VAT_Factor_Hidden__c.field-meta.xml
<CustomField>
    <fullName>VAT_Factor_Hidden__c</fullName>
    <formula>1 + ( Store__r.Village__r.Std_VAT_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Factor (Hidden)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>