force-app/main/default/objects/Daily_Sale__c/fields/Village_Code__c.field-meta.xml
<CustomField>
    <fullName>Village_Code__c</fullName>
    <formula>Store__r.Village__r.Village_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Village Code</label>
    <type>Text</type>
</CustomField>