force-app/main/default/objects/Daily_Sale__c/fields/VIP_Cards__c.field-meta.xml
<CustomField>
    <fullName>VIP_Cards__c</fullName>
    <inlineHelpText>Number of transactions with a VIP card scanned.</inlineHelpText>
    <label>VIP Cards</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>