force-app/main/default/objects/Daily_Sale__c/fields/VR_Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>VR_Estimated_Amount__c</fullName>
    <inlineHelpText>If the Brand have not entered an amount, you can enter an estimate here</inlineHelpText>
    <label>VR Estimated Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>