force-app/main/default/objects/Daily_Sale__c/fields/VR_Override_Reported_Amount__c.field-meta.xml
<CustomField>
    <fullName>VR_Override_Reported_Amount__c</fullName>
    <description>If populated, with be the MRI:  RTPAMOUNT sent via the INT_Reported_Amount__c formuila filed</description>
    <label>VR Override Reported Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>