force-app/main/default/objects/Daily_Sale__c/fields/Week_Commencing__c.field-meta.xml
<CustomField>
    <fullName>Week_Commencing__c</fullName>
    <formula>TEXT(Trading_Date__c - (MOD( Trading_Date__c - DATE(2016,1,4),7)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Commencing</label>
    <type>Text</type>
</CustomField>