force-app/main/default/objects/Daily_Sale__c/fields/X18_Digit_DS_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_DS_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit DS Id</label>
    <type>Text</type>
</CustomField>