force-app/main/default/objects/Daily_Sale__c/recordTypes/Current.recordType-meta.xml
<RecordType>
    <fullName>Current</fullName>
    <active>true</active>
    <description>Record Type replacing EDITABLE</description>
    <label>Current</label>
</RecordType>