force-app/main/default/objects/Daily_Sale__c/recordTypes/Discretionary_Discount.recordType-meta.xml
<RecordType>
    <fullName>Discretionary_Discount</fullName>
    <active>true</active>
    <label>Special Curated Selection</label>
</RecordType>