force-app/main/default/objects/Daily_Sale__c/recordTypes/Discretionary_Discount_NOT_Editable.recordType-meta.xml
<RecordType>
    <fullName>Discretionary_Discount_NOT_Editable</fullName>
    <active>true</active>
    <label>Special Curated Selection NOT Editable</label>
</RecordType>