force-app/main/default/objects/Daily_Sale__c/recordTypes/F_B_Covers.recordType-meta.xml
<RecordType>
    <fullName>F_B_Covers</fullName>
    <active>true</active>
    <description>Food and beverage covers</description>
    <label>F &amp; B Covers</label>
</RecordType>