force-app/main/default/objects/Daily_Sale__c/recordTypes/F_B_Covers_NOT_Editable.recordType-meta.xml
<RecordType>
    <fullName>F_B_Covers_NOT_Editable</fullName>
    <active>true</active>
    <label>F &amp; B Covers NOT Editable</label>
</RecordType>