force-app/main/default/objects/Daily_Sale__c/recordTypes/Full_Price.recordType-meta.xml
<RecordType>
    <fullName>Full_Price</fullName>
    <active>true</active>
    <label>Current Season Bestsellers</label>
</RecordType>