force-app/main/default/objects/Daily_Sale__c/recordTypes/Full_Price_Discretionary_Discount_NOT_Editable.recordType-meta.xml
<RecordType>
    <fullName>Full_Price_Discretionary_Discount_NOT_Editable</fullName>
    <active>true</active>
    <label>Current Season Bestsellers &amp; Special Curated Selection NOT Editable</label>
</RecordType>