force-app/main/default/objects/Daily_Sale__c/recordTypes/Full_Price_NOT_Editable.recordType-meta.xml
<RecordType>
    <fullName>Full_Price_NOT_Editable</fullName>
    <active>true</active>
    <description>When dailySales record is not editable and no actions are available</description>
    <label>Current Season Bestsellers NOT Editable</label>
</RecordType>