force-app/main/default/objects/Daily_Sale__c/recordTypes/Gross.recordType-meta.xml
<RecordType>
    <fullName>Gross</fullName>
    <active>true</active>
    <description>Figures entered in Gross</description>
    <label>Gross</label>
</RecordType>