force-app/main/default/objects/Daily_Sale__c/recordTypes/Gross_NOT_Editable.recordType-meta.xml
<RecordType>
    <fullName>Gross_NOT_Editable</fullName>
    <active>true</active>
    <label>Gross NOT Editable</label>
</RecordType>