force-app/main/default/objects/Daily_Sale__c/recordTypes/Historical.recordType-meta.xml
<RecordType>
    <fullName>Historical</fullName>
    <active>true</active>
    <description>Record Type replacing NOT EDITABLE</description>
    <label>Historical</label>
</RecordType>