force-app/main/default/objects/Daily_Sale__c/recordTypes/Net.recordType-meta.xml
<RecordType>
    <fullName>Net</fullName>
    <active>true</active>
    <description>Figures are entered by the Brand in NET</description>
    <label>Net</label>
</RecordType>