force-app/main/default/objects/Daily_Sale__c/recordTypes/Net_NOT_Editable.recordType-meta.xml
<RecordType>
    <fullName>Net_NOT_Editable</fullName>
    <active>true</active>
    <label>Net NOT Editable</label>
</RecordType>