force-app/main/default/objects/Daily_Sale__c/validationRules/Cannot_update_Confirmed_records.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_update_Confirmed_records</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Daily_Sales_Validations_Active__c &amp;&amp;
ISPICKVAL(Brand_Status__c , &quot;Confirmed&quot;) &amp;&amp;
TEXT(PRIORVALUE(Brand_Status__c)) &lt;&gt; &quot;Not Confirmed&quot;</errorConditionFormula>
    <errorMessage>You cannot update a Confirmed record in Salesforce. Confirmed records are Read-Only in Salesforce and must be updated in MRI</errorMessage>
</ValidationRule>