force-app/main/default/objects/Daily_Sale__c/validationRules/Discr_Disco_Sales_Higher_Total_Net_Sales.validationRule-meta.xml
<ValidationRule>
    <fullName>Discr_Disco_Sales_Higher_Total_Net_Sales</fullName>
    <active>true</active>
    <description>The Special Curated Selection Sales cannot be higher than the Total Net Sales.  The Total Net Sales should include all sales for the day.</description>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Daily_Sales_Validations_Active__c 
&amp;&amp; ( OR(Discretionary_Discount_Sales__c &gt; Total_NET_SALES__c, AND( NOT(ISNULL(Discretionary_Discount_Sales__c)),ISNULL(Total_NET_SALES__c) ) ) &amp;&amp; NOT( Ignore_Validations__c ) )
&amp;&amp; ( OR (RecordType.DeveloperName = &apos;Discretionary_Discount&apos;,RecordType.DeveloperName = &apos;Full_Price_Discretionary_Discount&apos;) )</errorConditionFormula>
    <errorDisplayField>Discretionary_Discount_Sales__c</errorDisplayField>
    <errorMessage>The Special Curated Selection Sales cannot be higher than the Total Net Sales.  The Total Net Sales should include all sales for the day.</errorMessage>
</ValidationRule>