force-app/main/default/objects/Daily_Sale__c/validationRules/Discr_Disco_Units_Higher_Total_Units.validationRule-meta.xml
<ValidationRule>
    <fullName>Discr_Disco_Units_Higher_Total_Units</fullName>
    <active>true</active>
    <description>The Special Curated Selection Units cannot be higher than the total Units Sold for the day.</description>
    <errorConditionFormula>OR(Discretionary_Discount_Units__c &gt; Units_Sold__c, AND( NOT(ISNULL(Discretionary_Discount_Units__c)),ISNULL(Units_Sold__c) ) ) &amp;&amp; NOT( Ignore_Validations__c )</errorConditionFormula>
    <errorDisplayField>Discretionary_Discount_Units__c</errorDisplayField>
    <errorMessage>The Special Curated Selection Units cannot be higher than the total Units Sold for the day.</errorMessage>
</ValidationRule>