force-app/main/default/objects/Daily_Sale__c/validationRules/Discr_Disco_Units_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Discr_Disco_Units_Mandatory</fullName>
    <active>false</active>
    <description>The Discretionary Discount Units is mandatory.</description>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Daily_Sales_Validations_Active__c 
&amp;&amp; ISNULL(Discretionary_Discount_Units__c)
&amp;&amp; NOT( Ignore_Validations__c ) 
&amp;&amp; NOT( Store_Closed__c )
&amp;&amp; ( OR (RecordType.DeveloperName = &apos;Discretionary_Discount&apos;,RecordType.DeveloperName = &apos;Full_Price_Discretionary_Discount&apos;) )
&amp;&amp; NOT(ISBLANK(CreatedDate))</errorConditionFormula>
    <errorDisplayField>Discretionary_Discount_Units__c</errorDisplayField>
    <errorMessage>The following mandatory field must be completed</errorMessage>
</ValidationRule>