force-app/main/default/objects/Daily_Sale__c/validationRules/Footfall_is_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Footfall_is_Zero</fullName>
    <active>false</active>
    <description>.</description>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Daily_Sales_Validations_Active__c &amp;&amp;  Footfall__c = 0  &amp;&amp; NOT( Ignore_Validations__c )</errorConditionFormula>
    <errorDisplayField>Footfall__c</errorDisplayField>
    <errorMessage>You have entered zero footfall. If the footfall figure is unknown please leave this field blank, otherwise enter the known value. Please set the &apos;Ignore Validations&apos; flag and add a note to this record if you believe 0 is the correct value.</errorMessage>
</ValidationRule>