force-app/main/default/objects/Daily_Sale__c/validationRules/No_of_transactions_not_gtr_NET_Sales.validationRule-meta.xml
<ValidationRule>
    <fullName>No_of_transactions_not_gtr_NET_Sales</fullName>
    <active>true</active>
    <description>Number of transactions should not be greater than total net sales</description>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Daily_Sales_Validations_Active__c 

&amp;&amp; NOT(ISBLANK( Number_of_Transactions__c ))
&amp;&amp; NOT(ISBLANK( Total_NET_SALES__c ))

&amp;&amp; Number_of_Transactions__c &gt;  Total_NET_SALES__c 
&amp;&amp; NOT( Ignore_Validations__c )</errorConditionFormula>
    <errorDisplayField>Number_of_Transactions__c</errorDisplayField>
    <errorMessage>The number of transactions should not be greater than the total NET sales.  Please check your figures. 
Please set the &apos;Ignore Validations&apos; flag and add a note to this record if you believe the values are correct</errorMessage>
</ValidationRule>