force-app/main/default/objects/Daily_Sale__c/validationRules/Number_of_covers_less_than_transactions.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_covers_less_than_transactions</fullName>
    <active>true</active>
    <description>he number of Covers cannot be less than the number of transactions.</description>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Daily_Sales_Validations_Active__c
&amp;&amp; NOT(ISBLANK(Covers__c ))
&amp;&amp; NOT(ISBLANK(Number_of_Transactions__c ))   
&amp;&amp; Number_of_Transactions__c &gt; Covers__c 
&amp;&amp; NOT( Ignore_Validations__c )</errorConditionFormula>
    <errorDisplayField>Audited_Amount__c</errorDisplayField>
    <errorMessage>The number of Covers cannot be less than the number of transactions. Please set the &apos;Ignore Validations&apos; flag and add a note to this record if you believe the values are correct</errorMessage>
</ValidationRule>