force-app/main/default/objects/Daily_Sale__c/validationRules/Number_of_units_must_be_gtr_than_transac.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_units_must_be_gtr_than_transac</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Daily_Sales_Validations_Active__c
&amp;&amp; ISBLANK(Covers__c) 
&amp;&amp; Number_of_Transactions__c &gt; Units_Sold__c
&amp;&amp; NOT( Ignore_Validations__c )</errorConditionFormula>
    <errorDisplayField>Number_of_Transactions__c</errorDisplayField>
    <errorMessage>The Number of transactions cannot be greater than the units sold. Please set the &apos;Ignore Validations&apos; flag and add a note to this record if you believe the values are correct</errorMessage>
</ValidationRule>